# aelys_lang

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
aelys/: Cargo.toml  build.rs
aelys-backend/: Cargo.toml
aelys-bytecode/: Cargo.toml
aelys-bytecode/src/asm/: disasm.rs  opcodes.rs
aelys-bytecode/src/bytecode/: buffer.rs  global_layout.rs
aelys-cli/: Cargo.toml
aelys-cli/src/cli/: mod.rs
aelys-cli/tests/: cli_args_tests.rs
aelys-common/: Cargo.toml
aelys-common/src/: lib.rs
aelys-common/src/warning/: annotation.rs  code.rs  kind.rs  message.rs  mod.rs
aelys-driver/: Cargo.toml
aelys-driver/src/modules/: needs.rs
aelys-frontend/: Cargo.toml
aelys-modules/: Cargo.toml
aelys-native/: Cargo.toml
aelys-native-macros/: Cargo.toml
aelys-opt/: Cargo.toml
aelys-opt/src/passes/: mod.rs  optimizer.rs
aelys-runtime/: Cargo.toml
aelys-runtime/src/stdlib/: mod.rs  net.rs
aelys-runtime/src/vm/verifier/bytecode/: globals.rs  mod.rs
aelys-sema/: Cargo.toml
aelys-sema/src/constraint/: reason.rs
aelys-syntax/: Cargo.toml
aelys/src/: lib.rs
aelys/tests/: adversarial_tests.rs  edge_cases_tests.rs  fmt_string_tests.rs  module_tests.rs  security_audit_tests.rs  stdlib_fs_tests.rs  stdlib_math_tests.rs  stdlib_net_tests.rs  stdlib_string_tests.rs  stdlib_sys_tests.rs  stdlib_time_tests.rs
docs/: acknowledgements.md  getting-started.md  installation.md  language-spec.md  standard-library.md
examples/: hello.aelys
examples/benchmark/: run_array_benchmarks.sh
examples/graphical_demo/: mandelbrot.aelys  starfield.aelys
(+38 files in other folders)
